--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -256,5 +257,7 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+test.py
 
 env
